# bikesharecharts

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
collector/: .gitignore  Cargo.toml  README.md  justfile
collector/src/: main.rs
src/: app.html
src/lib/: axis.svelte  station_row.svelte  stores.ts
src/routes/: +page.svelte
src/routes/summary/: +page.svelte
static/: id_map.json  station_information.json  station_information_array.json
web/: Justfile  package-lock.json  package.json  wrangler.toml
web/src/: app.html
web/src/lib/: axis.svelte  duckdb.ts  station_row.svelte  station_row_wrapper.svelte
web/src/routes/: +page.svelte
web/src/routes/summary/: +page.svelte
web/static/: id_map.json
worker/: README.md
worker/dc_station_status_worker/: wrangler.toml
worker/dc_station_status_worker/src/: index.ts
worker/station_information_worker/: wrangler.toml
worker/station_information_worker/src/: index.ts
worker/station_status_worker/: package-lock.json  package.json  wrangler.toml
worker/station_status_worker/src/: index.ts
